# LSL-Plugins

./: .gitignore  CMakeLists.txt  Makefile  lls_filter.c  lls_plugin.c
lsl_plugin_autogen/: moc_predefs.h  mocs_compilation.cpp
lsl_plugin_autogen/WBNAARIPX6/: moc_lsl_plugin_prop.cpp
lsl_plugin_autogen/include/: ui_lsl_plugin_prop.h
src/: lsl_filter.c  lsl_output.cpp  lsl_plugin.c  lsl_plugin.cpp  lsl_plugin_prop.cpp  lsl_plugin_prop.ui
src/header/: lsl_filter.h  lsl_output.h  lsl_plugin_prop.h
